fix sidebar making post overflow

--- a/post/post-detail.style.css
+++ b/post/post-detail.style.css
@@ -1,5 +1,6 @@
 .desktop-sidebar {
   display: none;
+  width: 0;
 }
 
 .sidebar__layout {
